--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "App": {
+    "ClockTimeApiUrl": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
+    "Interval": 2
   }
 }
