--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -1,13 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Worker">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-Service-32E57495-7D30-4F2C-9B1D-C42CC55595EC</UserSecretsId>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<RootNamespace>Tellurian.Trains.ClockPulseApp.Service</RootNamespace>
+		<AssemblyName>Tellurian.Trains.ClockPulseApp.Service</AssemblyName>
+		<Version>3.2.1</Version>
+		<Company>Tellurian Interactive AB</Company>
+		<Product>Tellurian Module Meeting App</Product>
+		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
+		<NeutralLanguage>en-GB</NeutralLanguage>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>dotnet-Service-32E57495-7D30-4F2C-9B1D-C42CC55595EC</UserSecretsId>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="Tellurian.Trains.MeetingApp.Contracts" Version="3.2.1" />
+	</ItemGroup>
 </Project>
