--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -5,8 +5,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "App": {
-    "ClockTimeApiUrl": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
-    "Interval": 2
+  "PulseGeneratorOptions": {
+    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
+    "PollIntervalSeconds": 2,
+    "FastForwardMinuteMilliseconds": 2000,
+    "PulseLengthMilliseconds": 1500,
+    "AnalogueClockStartTime": "06:00"
   }
 }
