Support for 12-hour clock.

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -5,11 +5,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "PulseGeneratorOptions": {
+  "PulseGeneratorSettings": {
     "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
     "PollIntervalSeconds": 2,
     "FastForwardMinuteMilliseconds": 2000,
     "PulseLengthMilliseconds": 1500,
-    "AnalogueClockStartTime": "06:00"
+    "AnalogueClockStartTime": "06:00",
+    "Use12HourClock": true
   }
 }
