--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -8,9 +8,17 @@
   "PulseGeneratorSettings": {
     "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
     "PollIntervalSeconds": 2,
+    "AnalogueClockStartTime": "06:00",
     "FastForwardMinuteMilliseconds": 2000,
     "PulseLengthMilliseconds": 1500,
-    "AnalogueClockStartTime": "06:00",
-    "Use12HourClock": true
+    "Use12HourClock": true,
+    "UdpBroadcast": {
+      "IPAddress": "255.255.255.255",
+      "PortNumber":  25501
+    },
+    "SerialPulseSink": {
+      "PortName": "COM3",
+      "DtrOnly": false
+    }
   }
 }
