Added support for RPi Relay Board on Raspberry PI.

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -9,16 +9,18 @@
     "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
-    "FastForwardIntervalMilliseconds": 2000,
-    "PulseDurationMilliseconds": 1500,
+    "FastForwardIntervalMilliseconds": 3000,
+    "PulseDurationMilliseconds": 2000,
     "Use12HourClock": true,
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
-      "PortNumber":  25501
+      "PortNumber": 25501,
+      "Disabled" :  true
     },
     "SerialPulseSink": {
       "PortName": "COM3",
-      "DtrOnly": false
+      "DtrOnly": false,
+      "Disabled":  true
     }
   }
 }
