--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Tellurian.Trains.ClockPulseApp.Service</RootNamespace>
 		<AssemblyName>Tellurian.Trains.ClockPulseApp.Service</AssemblyName>
-		<Version>1.2.0</Version>
+		<Version>1.2.2</Version>
 		<Company>Tellurian Interactive AB</Company>
 		<Product>Tellurian Module Meeting App</Product>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+		<PackageReference Include="System.Device.Gpio" Version="2.1.0" />
 		<PackageReference Include="System.IO.Ports" Version="6.0.0" />
 		<PackageReference Include="Tellurian.Trains.MeetingApp.Contracts" Version="3.2.1" />
 	</ItemGroup>
