--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Tellurian.Trains.ClockPulseApp.Service</RootNamespace>
 		<AssemblyName>Tellurian.Trains.ClockPulseApp.Service</AssemblyName>
-		<Version>1.2.2</Version>
+		<Version>1.3.0</Version>
 		<Company>Tellurian Interactive AB</Company>
 		<Product>Tellurian Module Meeting App</Product>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
@@ -13,6 +13,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UserSecretsId>dotnet-Service-32E57495-7D30-4F2C-9B1D-C42CC55595EC</UserSecretsId>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="AnalogueTime.txt" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
