--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -15,12 +15,15 @@
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
-      "Disabled" :  true
+      "Disabled": true
     },
     "SerialPulseSink": {
       "PortName": "COM3",
       "DtrOnly": false,
-      "Disabled":  true
+      "Disabled": true
+    },
+    "RpiRelayBoardPulseSink": {
+      "UseRelay1AsClockStatus": false
     }
   }
 }
