--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "PulseGeneratorSettings": {
-    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time",
+    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Analogue%20Clocks",
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
     "FastForwardIntervalMilliseconds": 3000,
