--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -4,7 +4,8 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Tellurian.Trains.ClockPulseApp.Service</RootNamespace>
 		<AssemblyName>Tellurian.Trains.ClockPulseApp.Service</AssemblyName>
-		<Version>1.3.1</Version>
+		<RuntimeIdentifier>linux-arm</RuntimeIdentifier>
+		<Version>1.3.2</Version>
 		<Company>Tellurian Interactive AB</Company>
 		<Product>Tellurian Module Meeting App</Product>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
@@ -14,8 +15,18 @@
 		<UserSecretsId>dotnet-Service-32E57495-7D30-4F2C-9B1D-C42CC55595EC</UserSecretsId>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<IsWindows Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">true</IsWindows>
+		<IsOSX Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">true</IsOSX>
+		<IsLinux Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">true</IsLinux>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <None Remove="AnalogueTime.txt" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm.pubxml" />
 	</ItemGroup>
 
 	<ItemGroup>
