Changed implementation of RPI Relay Board sink.

--- a/Service/Properties/launchSettings.json
+++ b/Service/Properties/launchSettings.json
@@ -1,11 +1,12 @@
-﻿{
+{
   "profiles": {
     "Service": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "commandLineArgs": "-r",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
   }
 }
