--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -6,12 +6,13 @@
     }
   },
   "PulseGeneratorSettings": {
-    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Analogue%20Clocks",
+    "RemoteClockTimeHref": "https://localhost:5001/api/clocks/demo/time?user=Analogue%20Clocks",
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
     "FastForwardIntervalMilliseconds": 3000,
     "PulseDurationMilliseconds": 2000,
     "Use12HourClock": true,
+    "FlipPolarity":  true,
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
@@ -23,7 +24,7 @@
       "Disabled": true
     },
     "RpiRelayBoardPulseSink": {
-      "UseRelay1AsClockStatus": false
+      "Disabled": true
     }
   }
 }
