--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -18,7 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm.pubxml" />
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-32.pubxml" />
+	  <_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-64.pubxml" />
 	</ItemGroup>
 
 	<ItemGroup>
