--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -9,10 +9,10 @@
     "RemoteClockTimeHref": "https://localhost:5001/api/clocks/demo/time?user=Analogue%20Clocks",
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
-    "FastForwardIntervalMilliseconds": 3000,
-    "PulseDurationMilliseconds": 2000,
+    "FastForwardIntervalMilliseconds": 1500,
+    "PulseDurationMilliseconds": 1000,
     "Use12HourClock": true,
-    "FlipPolarity":  true,
+    "FlipPolarity":  false,
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
