Added documentation. A lot of refactoring of the code.

--- a/Service/appsettings.Development.json
+++ b/Service/appsettings.Development.json
@@ -5,5 +5,27 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Tellurian.Trains.ClockPulseApp.Service": "Debug"
     }
+  },
+  "PulseGeneratorSettings": {
+    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Development%20Clocks",
+    "PollIntervalSeconds": 2,
+    "AnalogueClockStartTime": "06:00",
+    "FastForwardIntervalMilliseconds": 500,
+    "PulseDurationMilliseconds": 200,
+    "Use12HourClock": true,
+    "FlipPolarity": false,
+    "UdpBroadcast": {
+      "IPAddress": "255.255.255.255",
+      "PortNumber": 25501,
+      "Disabled": true
+    },
+    "SerialPulseSink": {
+      "PortName": "COM3",
+      "DtrOnly": false,
+      "Disabled": true
+    },
+    "RpiRelayBoardPulseSink": {
+      "Disabled": true
+    }
   }
 }
