--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -1,18 +1,26 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Console": {
+      "FormatterName": "simple",
+      "FormatterOptions": {
+        "IncludeScopes": false,
+        "TimestampFormat": "HH:mm:ss",
+        "SingleLine":  true
+      },
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
   },
   "PulseGeneratorSettings": {
-    "RemoteClockTimeHref": "https://localhost:5001/api/clocks/demo/time?user=Analogue%20Clocks",
+    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Development%20Clocks",
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
     "FastForwardIntervalMilliseconds": 1500,
     "PulseDurationMilliseconds": 1000,
     "Use12HourClock": true,
-    "FlipPolarity":  false,
+    "FlipPolarity": false,
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
