--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -16,6 +16,7 @@
   "PulseGeneratorSettings": {
     "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Development%20Clocks",
     "PollIntervalSeconds": 2,
+    "SessionEndedIndicationSeconds": 5,
     "AnalogueClockStartTime": "06:00",
     "FastForwardIntervalMilliseconds": 1500,
     "PulseDurationMilliseconds": 1000,
