Upgrade to .NET8. Added fatures for indicating start/stop of clock.

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -33,6 +33,7 @@
       "Disabled": true
     },
     "RpiRelayBoardPulseSink": {
+      "ClockStoppedPinUse" : "RedGreen", // or "Alarm"
       "Disabled": true
     }
   }
