Simplified configuration. Release 1.11.0.

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -5,7 +5,7 @@
       "FormatterOptions": {
         "IncludeScopes": false,
         "TimestampFormat": "HH:mm:ss",
-        "SingleLine":  true
+        "SingleLine": true
       },
       "LogLevel": {
         "Default": "Information",
@@ -14,13 +14,16 @@
     }
   },
   "PulseGeneratorSettings": {
-    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Development%20Clocks",
-    "PollIntervalSeconds": 2,
-    "SessionEndedIndicationSeconds": 5,
-    "AnalogueClockStartTime": "06:00",
-    "FastForwardIntervalMilliseconds": 500,
-    "PulseDurationMilliseconds": 300,
-    "Use12HourClock": true,
+    "ClockName": "Demo", // Change clock name to clock name used. You should not use the Demo clock at meetings.
+    "UseRemoteClock": false, // Set to true of if you want analogie clocks to fetch timing fom cloud clock.
+    "LocalServerHref": "http://localhost:5000", // This is the href to your local clock server. CHANGE this value if necessary.
+    "RemoteServerHref": "https://fastclock.azurewebsites.net", // This is the current href to the cloud clock. 
+    "PollIntervalSeconds": 2, // The recommended setting is once every two seconds.
+    "SessionEndedIndicationSeconds": 5, // This is the duration of the 'end of session' indication. This may or may not be supported in sinks.
+    "AnalogueClockStartTime": "06:00", // This is the default initial setting of analogue clocks. It can also be set in AnalogueTime.txt.
+    "FastForwardIntervalMilliseconds": 500, // The time of each minute when fast forwarding the analogue clocks. 
+    "PulseDurationMilliseconds": 300, // This is the duration of the pulses sent to analogue clocks. It MUST be 200 ms less than the FastForwardIntervalMilliseconds.
+    "Use12HourClock": true, // This must be true when using 12 hour analogue clocks, like the FREMO RUT-clocks.
     "FlipPolarity": false,
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
@@ -33,7 +36,7 @@
       "Disabled": true
     },
     "RpiRelayBoardPulseSink": {
-      "ClockStoppedPinUse" : "RedGreen", // or "Alarm"
+      "ClockStoppedPinUse": "RedGreen", // or "Alarm"
       "Disabled": true
     }
   }
