--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
 	<PropertyGroup>
-		<Version>1.10.0</Version>
+		<Version>1.11.0</Version>
 		<Company>Tellurian Interactive AB</Company>
-		<Product>Tellurian Module Meeting App</Product>
+		<Product>Tellurian Trains Clock Pulse Service</Product>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		<NeutralLanguage>en-GB</NeutralLanguage>
 	</PropertyGroup>
