--- a/Service/appsettings.Development.json
+++ b/Service/appsettings.Development.json
@@ -7,7 +7,10 @@
     }
   },
   "PulseGeneratorSettings": {
-    "RemoteClockTimeHref": "https://fastclock.azurewebsites.net/api/clocks/demo/time?user=Development%20Clocks",
+    "ClockName": "Demo", 
+    "UseRemoteClock": true, 
+    "LocalServerHref": "http://localhost:5000", 
+    "RemoteServerHref": "https://fastclock.azurewebsites.net", 
     "PollIntervalSeconds": 2,
     "AnalogueClockStartTime": "06:00",
     "FastForwardIntervalMilliseconds": 500,
