--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -15,8 +15,8 @@
   },
   "PulseGeneratorSettings": {
     "ClockName": "Demo", // Change clock name to clock name used. You should not use the Demo clock at meetings.
-    "UseRemoteClock": false, // Set to true of if you want analogie clocks to fetch timing fom cloud clock.
-    "LocalServerHref": "http://localhost:5000", // This is the href to your local clock server. CHANGE this value if necessary.
+    "UseRemoteClock": false, // Set to true of if you want analogue clocks to fetch timing from cloud clock.
+    "LocalServerHref": "http://localhost:5000", // This is the href to your local clock server. CHANGE this value only if you change the servers default href..
     "RemoteServerHref": "https://fastclock.azurewebsites.net", // This is the current href to the cloud clock. 
     "PollIntervalSeconds": 2, // The recommended setting is once every two seconds.
     "SessionEndedIndicationSeconds": 5, // This is the duration of the 'end of session' indication. This may or may not be supported in sinks.
@@ -24,7 +24,7 @@
     "FastForwardIntervalMilliseconds": 500, // The time of each minute when fast forwarding the analogue clocks. 
     "PulseDurationMilliseconds": 300, // This is the duration of the pulses sent to analogue clocks. It MUST be 200 ms less than the FastForwardIntervalMilliseconds.
     "Use12HourClock": true, // This must be true when using 12 hour analogue clocks, like the FREMO RUT-clocks.
-    "FlipPolarity": false,
+    "FlipPolarity": false, // Can be used if analogue clocks does not sync correctly on the minute. But better to change polarity of the clocks.
     "UdpBroadcast": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
