ZNSERVER first implementation
Clock Pulse Service - ZNSERVER Integration
Features Added
1. ZNSERVER Communication
Automatic server discovery via UDP broadcast (port 57111)
Station identity management with configurable station code and name
Time synchronization using the UHR command format
Connection health monitoring with 5-minute timeout
Automatic reconnection and state recovery
2. Linux ARM64 Deployment
Self-contained application package
Systemd service installation script
Configurable installation options:
Custom installation directory
Service user selection
Automatic startup configuration
Protocol Specification
Message Flow
Discovery Phase

Client broadcasts discovery request
Server responds with port number
Client establishes connection
Station Registration

Sends station ID after connection
Format: 3-letter code + station name
Example: Hauptbahnhof (HBF)
Time Updates

Regular time updates in HH:mm format
Automatic resync after reconnection
Maintains time state during disconnections
Configuration
Add station details in appsettings.json
Default port: 57111
Configurable timeout (default: 5 minutes)
Optional systemd integration
Usage
> ./deploy.sh [-d <dir>] [-i] [-u <user>]

--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -30,6 +30,13 @@
       "PortNumber": 25501,
       "Disabled": true
     },
+    "ZNServer": {
+      "DiscoveryIPAddress": "255.255.255.255",
+      "DiscoveryPort": 57111,
+      "StationCode": "FKB",  // 3-letter station code
+      "StationName": "Falkenberg",  // Full station name
+      "Disabled": true
+    },
     "SerialPulseSink": {
       "PortName": "COM3",
       "DtrOnly": false,
