--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -18,6 +18,13 @@
 		<None Remove="AnalogueTime.txt" />
 	</ItemGroup>
 	<ItemGroup>
+		<Content Include="Scripts\deploy.sh">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+			<Link>deploy.sh</Link>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-32.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-64.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\win-arm64.pubxml" />
@@ -25,8 +32,8 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="System.Device.Gpio" Version="3.2.0" />
-		<PackageReference Include="System.Text.Json" Version="8.0.4" />
-		<PackageReference Include="Tellurian.Trains.MeetingApp.Contracts" Version="3.6.2" />
+		<PackageReference Include="System.Text.Json" Version="8.0.5" />
+		<PackageReference Include="Tellurian.Trains.MeetingApp.Contracts" Version="3.7.1" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="System.IO.Ports" Version="8.0.0" />
 	</ItemGroup>
