--- a/Service/appsettings.json
+++ b/Service/appsettings.json
@@ -25,12 +25,13 @@
     "PulseDurationMilliseconds": 300, // This is the duration of the pulses sent to analogue clocks. It MUST be 200 ms less than the FastForwardIntervalMilliseconds.
     "Use12HourClock": true, // This must be true when using 12 hour analogue clocks, like the FREMO RUT-clocks.
     "FlipPolarity": false, // Can be used if analogue clocks does not sync correctly on the minute. But better to change polarity of the clocks.
-    "UdpBroadcast": {
+    
+    "UdpBroadcastSink": {
       "IPAddress": "255.255.255.255",
       "PortNumber": 25501,
       "Disabled": true
     },
-    "ZNServer": {
+    "ZNServerSink": {
       "DiscoveryIPAddress": "255.255.255.255",
       "DiscoveryPort": 57111,
       "StationCode": "FKB",  // 3-letter station code
