--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,13 @@
 <Project>
 	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+
 		<Version>1.13.0</Version>
 		<Company>Tellurian Interactive AB</Company>
 		<Product>Tellurian Trains Clock Pulse Service</Product>
 		<PackageLicenseExpression>GPL-3.0-or-later</PackageLicenseExpression>
 		<NeutralLanguage>en-GB</NeutralLanguage>
+		
 	</PropertyGroup>
 	<PropertyGroup>
 		<Nullable>enable</Nullable>
