--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
 		<RootNamespace>Tellurian.Trains.ClockPulseApp.Service</RootNamespace>
 		<AssemblyName>Tellurian.Trains.ClockPulseApp.Service</AssemblyName>
 		<UserSecretsId>dotnet-Service-32E57495-7D30-4F2C-9B1D-C42CC55595EC</UserSecretsId>
@@ -25,16 +24,14 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-32.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux-arm-64.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\win-arm64.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\win-x64.pubxml" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
-		<PackageReference Include="System.Device.Gpio" Version="3.2.0" />
-		<PackageReference Include="System.IO.Ports" Version="9.0.6" />
-		<PackageReference Include="System.Text.Json" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
+		<PackageReference Include="System.Device.Gpio" Version="4.0.1" />
+		<PackageReference Include="System.IO.Ports" Version="10.0.0" />
 		<PackageReference Include="Tellurian.Trains.MeetingApp.Contracts" Version="3.7.2" />
 	</ItemGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
@@ -44,4 +41,17 @@
 	<ItemGroup Condition="'$(Configuration)' == 'Release'">
 		<Content Update="appsettings.Development.json" CopyToPublishDirectory="Never" />
 	</ItemGroup>
+
+	<PropertyGroup>
+		<ZipFolder>'C:\Users\Stefan\OneDrive\Public\Deploy\ClockPulseService'</ZipFolder>
+	</PropertyGroup>
+
+	<Target Name="ZipAfterPublish" AfterTargets="Publish">
+		<ZipDirectory SourceDirectory="$(OutputPath)" DestinationFile="$(PublishDir)\..\$(RuntimeIdentifier).zip" Overwrite="true" />
+	</Target>
+
+	<!--<Target Name="DeleteUnsipedFolder" AfterTargets="ZipAfterPublish">
+		<RemoveDir Directories="$(PublishDir)"></RemoveDir>
+	</Target>-->
+
 </Project>
